# Abitura

./: .gitignore  README.md  main.py  nngu_01_03_02_priklad_matem_inform.csv  nngu_02_03_02_ingeneria_PO.csv  nngu_02_03_02_sopraj_razrabotka.csv  nngu_09_03_03_priklad_inform.csv  nngu_09_03_04_razr_po.csv  parsing_NNGU.py  pyproject.toml  urls.py  Сводка.xlsx
