[project]
name = "abitura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
]
